--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@supabase/supabase-js": "^2.38.5",
     "axios": "^1.6.2",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
