--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
